# localRAGassistant

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  docker-swarm.yml  gunicorn.conf.py  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
ansible/: playbook.yml
config/: default.yaml  lightweight.yaml  production.yaml
helm/: Chart.yaml
k8s/: deployment.yaml
monitoring/: alertmanager.yml  grafana-dashboard.json
nomad/: local-rag-assistant.nomad
requirements/: base.txt  dev.txt  production.txt
scripts/: backup.sh  local-rag-assistant.service  nginx.conf  setup.sh  start-lightweight.sh  start.sh  stop.sh
src/: __init__.py  main.py
src/api/: dependencies.py
src/api/v1/: api.py
src/api/v1/endpoints/: documents.py  health.py  queries.py
src/core/: config.py
src/models/: document.py  query.py
src/services/: document_service.py  rag_service.py
src/static/css/: custom.css
src/static/js/: app.js
src/templates/: index.html
src/utils/: logging.py
terraform/: main.tf
tests/: test_basic.py
vault/: local-rag-assistant.hcl
